<resources>
    <string name="app_name">Fire Notepad</string>

    <string name="lorem_ipsum">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source.</string>
    <string name="lorem_ipsum_body">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.

The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</string>

    <string name="illustration_1">Fire Notepad notebook in which you want to paste photos, tickets, maps and everything related to travel. Write down here the people to whom you are grateful, record your gratitude to the world.</string>
    <string name="illustration_2">Fire Notepad for a novel do you know how Gogol wrote his works? Manually, rewriting several times. I read about this method in a book by Catherine Oaro. Maybe your book will also start with a notebook or notebook?</string>
    <string name="illustration_3">Fire Notepad personal diary a description of thoughts, events of the day, plans, dreams, feelings, states and discoveries.</string>

    <!--    Shared preferences keys     -->
    <string name="shared_preferences_notepad">SHARED_PREFERENCES_NOTEPAD</string>
    <string name="saved_on_boarding_status_key">SAVED_ON_BOARDING_STATUS_KEY</string>
    <string name="saved_displaying_elements">SAVED_DISPLAYING_ELEMENTS</string>
    <string name="saved_displaying_text_note">SAVED_DISPLAYING_TEXT_NOTE</string>
    <string name="notes">Notes</string>
    <string name="favorite">Favorite</string>
    <string name="reminders">Reminders</string>
    <string name="trash">Trash</string>
    <string name="support">Support</string>
    <string name="settings">Settings</string>
    <string name="more">More</string>
    <string name="sorting">Sorting</string>
    <string name="personally">Personally</string>
    <string name="by_date_of_change">By date of change</string>
    <string name="by_title">By title</string>
    <string name="displaying_elements">Displaying elements</string>
    <string name="plate">Plate</string>
    <string name="row">Row</string>
    <string name="share_note">Share note</string>
    <string name="delete">Delete</string>
    <string name="change_color_background">Change color background</string>
    <string name="create_note">Create note</string>
    <!--    Type note key-->
    <string name="note_key">note_key</string>
    <string name="note_key_remembering">note_key_remembering</string>
    <string name="add_a_remember">Add a remember</string>
    <string name="set_date">Set date:</string>
    <string name="today">Today</string>
    <string name="do_not_repeat">Do not repeat:</string>
    <string name="show_text">Show text:</string>
    <string name="set_time">Set time:</string>
    <string name="enter_your_pin">Enter your PIN</string>
    <string name="notification">Notification</string>
    <string name="palette">Palette</string>
    <string name="attach_file">Attach file</string>
    <string name="checklist">Checklist</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="okay">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="color_picker">Color picker</string>
    <string name="add_your_photo_with_camera">Add Your photo with camera</string>
    <string name="add_your_photo_with_gallery">Add Your photo with gallery</string>
    <string name="displaying_text_notes">Displaying text notes</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <array name="data_spinner">
        <item>Dont repeat</item>
        <item>Every day</item>
        <item>Every month</item>
        <item>Every year</item>
    </array>
    <string name="title_activity_settings_fragment">SettingsActivityFragment</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_settings">Settings</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="_00_00">00:00</string>
    <string name="info_help">If you have any questions, suggestions, or would like to leave a comment regarding this application, please contact us using the electronic button by clicking on the button Contact Us. Thank You, we appreciate every user! </string>
    <string name="send">Contact us</string>
    <string name="title">Title</string>
    <string name="your_text">Your text</string>
    <string name="new_task">New Task</string>
    <string name="get_started">Get Started</string>
    <string name="write_down_your_thoughts_in_a_fire_notepad">Write down your thoughts in a Fire Notepad.</string>
</resources>