<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.kabasonic.notepad.ui.home.HomeFragment"
        android:label="@string/notes"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_noteFragment"
            app:destination="@id/noteFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_homeFragment_to_trashFragment"
            app:destination="@id/trashFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
    </fragment>

    <fragment
        android:id="@+id/favoriteFragment"
        android:name="com.kabasonic.notepad.ui.favorite.FavoriteFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_favorite">

        <action
            android:id="@+id/action_favoriteFragment_to_noteFragment"
            app:destination="@id/noteFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
    </fragment>

    <fragment
        android:id="@+id/remindersFragment"
        android:name="com.kabasonic.notepad.ui.reminder.RemindersFragment"
        android:label="@string/reminders"
        tools:layout="@layout/fragment_reminders">

    </fragment>

    <fragment
        android:id="@+id/trashFragment"
        android:name="com.kabasonic.notepad.ui.trash.TrashFragment"
        android:label="@string/trash"
        tools:layout="@layout/fragment_trash">

        <action
            android:id="@+id/action_trashFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
    </fragment>

    <fragment
        android:id="@+id/helpFragment"
        android:name="com.kabasonic.notepad.ui.help.HelpFragment"
        android:label="@string/support"
        tools:layout="@layout/fragment_help">

    </fragment>

    <fragment
        android:id="@+id/noteFragment"
        android:name="com.kabasonic.notepad.ui.note.NoteFragment"
        android:label="@string/create_note"
        tools:layout="@layout/fragment_note">
        <argument
            android:name="TypeNote"
            app:argType="string" />
        <action
            android:id="@+id/action_noteFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <argument
            android:name="NoteId"
            app:argType="integer" />
        <action
            android:id="@+id/action_noteFragment_to_favoriteFragment"
            app:destination="@id/favoriteFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
    </fragment>


</navigation>