<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

<LinearLayout

    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_round_notifications_24"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_a_remember"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginBottom="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/set_date"
            android:textColor="@color/black"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp" />

        <TextView
            android:id="@+id/day_reminder"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/today"
            android:textColor="@color/black"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:onClick="onClick"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/set_time"
            android:textColor="@color/black"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp" />

        <TextView
            android:id="@+id/time_reminder"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="00:00"
            android:textColor="@color/black"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:onClick="onClick"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/do_not_repeat"
            android:textColor="@color/black"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp" />



        <Spinner
            android:id="@+id/spinner_reminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">
        </Spinner>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Show text"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            android:layout_marginStart="16dp" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/set_switch_reminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:onClick="onClick"
            android:layout_margin="8dp"/>
    </LinearLayout>



      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:orientation="horizontal">
          <com.google.android.material.button.MaterialButton
              android:id="@+id/bt_cancel_reminder"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="Cancel"
              android:onClick="onClick"
              android:layout_margin="16dp"/>
          <com.google.android.material.button.MaterialButton
              android:id="@+id/bt_okay_reminder"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="Okay"
              android:onClick="onClick"
              android:layout_margin="16dp"/>
      </LinearLayout>
</LinearLayout>
    </androidx.cardview.widget.CardView>